y-overflow fix

--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -1,8 +1,9 @@
 body {
-  background: -moz-linear-gradient( top, #eeeeee, white 400px ); }
+    background: -moz-linear-gradient( top, #eeeeee, white 400px );
+    overflow-y: scroll;
+}
 html, body {
     margin: 0; height: 100%;
-    overflow-y: scroll;
 }
 
 .header-bar {
